--- a/property_select.html
+++ b/property_select.html
@@ -37,7 +37,7 @@
       // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
       // ★ ここに、さっきGASをデプロイした時に取得した「ウェブアプリのURL」を貼り付けてね！ ★
       // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
-      const gasWebAppUrl = 'YOUR_GAS_WEB_APP_URL_HERE'; // 例: 'https://script.google.com/macros/s/xxxxxxxxxxxxxxxxx/exec'
+      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycbyEO-2FKKQ7_m9RzfjaTpXmry5gJIg07UCJ5CKrIyIISYyFh09t8atdROU7hJDu7_jQFQ/exec'; // 例: 'https://script.google.com/macros/s/xxxxxxxxxxxxxxxxx/exec'
 
       try {
         const response = await fetch(gasWebAppUrl);
