--- a/property_select.html
+++ b/property_select.html
@@ -37,7 +37,7 @@
       // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
       // ★ ここに、さっきGASをデプロイした時に取得した「ウェブアプリのURL」を貼り付けてね！ ★
       // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
-      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycbz8k87YBN27IrlpzOMYH4GzUNdWZMYEWdyvqmwLE86vwYNqQcYRkcLzpnFtIfLpJkYOZw/exec'; // 例: 'https://script.google.com/macros/s/xxxxxxxxxxxxxxxxx/exec'ß
+      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycbxNpmAydEOsQaDgkwf7R4Qk4A1c-h5yEq6z62GLZE3dMGxYR-6_aB7OzZUMO_ncU8D1Lg/exec';
 
       try {
         const response = await fetch(gasWebAppUrl);
