--- a/room_select.html
+++ b/room_select.html
@@ -48,7 +48,7 @@
       // ★ ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ ★
       // ★ さっきGASをデプロイして取得した「部屋リスト取得用の新しいウェブアプリURL」をここに設定！ ★
       // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
-      const gasWebAppUrlForRoomsBase = 'https://script.google.com/macros/s/AKfycby0c-yVJ2uFRYYU9dHGwacSw6Qm92uLooENApA-Sqd74hdXmFYaViMncdGkyJFgO_Dw5Q/exec'; // 例: 'https://script.google.com/macros/s/yyyyyyyyyyyyyyyyy/exec'
+      const gasWebAppUrlForRoomsBase = 'https://script.google.com/macros/s/AKfycbyBmTvwjGDPGuoQcs4IYry1tqyZg7kbombCl_kSVoNZ4IO1W3iR_5ezNr5_Jp2G241PhQ/exec';
       const gasWebAppUrlForRooms = `${gasWebAppUrlForRoomsBase}?propertyId=${propertyId}`;
 
       try {
