--- a/property_select.html
+++ b/property_select.html
@@ -4,6 +4,8 @@
   <title>物件選択</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- LIFF SDKの読み込み -->
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <!-- ここにWOFF特有の初期設定やCSSのリンクなどが入るかもしれないね -->
   <style>
     /* 簡単な見た目のためのCSS（後でちゃんと作る） */
@@ -23,11 +25,32 @@
   </div>
 
   <script>
-    // WOFFアプリが初期化されたら実行される関数 (WOFFの作法に合わせる必要があるかも)
-    window.onload = function() {
-      fetchProperties();
-      setupSearch(); // 検索機能のセットアップ関数を呼び出す
-    };
+    // WOFFアプリが初期化されたら実行される関数
+    window.addEventListener('DOMContentLoaded', (event) => {
+      initializeLiff();
+    });
+
+    async function initializeLiff() {
+      try {
+        // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
+        // ★ ここに、LINE Developersコンソールで取得したLIFF IDを設定してください！ ★
+        // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
+        await liff.init({ liffId: "YOUR_LIFF_ID" }); // YOUR_LIFF_IDを実際のLIFF IDに置き換えてください
+        if (!liff.isLoggedIn()) {
+          // ログインしていなければログインを促す（WOFFでは通常自動ログインされることが多い）
+          // 必要に応じてログイン処理を実装してください
+          console.log("ログインしていません。");
+          // liff.login();
+        }
+        // LIFFの初期化が成功したら、アプリのメイン処理を開始
+        fetchProperties();
+        setupSearch();
+      } catch (error) {
+        console.error('LIFFの初期化に失敗しました:', error);
+        // ユーザーにエラーを通知する処理（例: アラート表示など）
+        document.getElementById('property-list').innerHTML = '<p>アプリの起動に失敗しました。LIFF IDが正しく設定されているか確認してください。</p>';
+      }
+    }
 
     // GASから物件リストを取得して表示する関数
     async function fetchProperties() {
@@ -61,7 +84,16 @@
             const params = new URLSearchParams();
             params.append('propertyId', property.id);
             params.append('propertyName', property.name);
-            window.location.href = `room_select.html?${params.toString()}`;
+            // liff.openWindow() を使って画面遷移
+            if (liff.isInClient()) {
+              liff.openWindow({
+                url: `room_select.html?${params.toString()}`,
+                external: false // WOFF内部での遷移
+              });
+            } else {
+              // LIFFブラウザ外の場合のフォールバック（通常のブラウザ遷移）
+              window.location.href = `room_select.html?${params.toString()}`;
+            }
           };
           propertyListDiv.appendChild(button);
         });
