--- a/property_select.html
+++ b/property_select.html
@@ -35,7 +35,7 @@
         // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
         // ★ ここに、LINE Developersコンソールで取得したLIFF IDを設定してください！ ★
         // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
-        await liff.init({ liffId: "YOUR_LIFF_ID" }); // YOUR_LIFF_IDを実際のLIFF IDに置き換えてください
+        await liff.init({ liffId: "https://woff.worksmobile.com/woff/Mtmj4rddmxBddYCPD0G81A" }); // YOUR_LIFF_IDを実際のLIFF IDに置き換えてください
         if (!liff.isLoggedIn()) {
           // ログインしていなければログインを促す（WOFFでは通常自動ログインされることが多い）
           // 必要に応じてログイン処理を実装してください
