--- a/property_select.html
+++ b/property_select.html
@@ -48,7 +48,7 @@
       } catch (error) {
         console.error('LIFFの初期化に失敗しました:', error);
         // ユーザーにエラーを通知する処理（例: アラート表示など）
-        document.getElementById('property-list').innerHTML = '<p>アプリの起動に失敗しました。LIFF IDが正しく設定されているか確認してください。</p>';
+        document.getElementById('property-list').innerHTML = '<p>アプリの起動に失敗しました。LIFF IDが正しく設定されているかああああああああああああああ確認してください。</p>';
       }
     }
 
