--- a/property_select.html
+++ b/property_select.html
@@ -35,7 +35,7 @@
         // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
         // ★ ここはLINE WORKSのWOFFアプリのエンドポイントURLです ★
         // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
-        const liffIdForWorks = "https://woff.worksmobile.com/woff/Mtmj4rddmxBddYCPD0G81A";
+        const liffIdForWorks = "https://line-app-project.vercel.app/property_select.html";
         console.log('[property_select] liff.init with liffId:', liffIdForWorks);
         await liff.init({ liffId: liffIdForWorks });
         console.log('[property_select] liff.init successful.');
