--- a/property_select.html
+++ b/property_select.html
@@ -4,8 +4,8 @@
   <title>物件選択</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- LIFF SDKの読み込み -->
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <!-- WOFF SDKの読み込み (LINE WORKS用) -->
+  <script charset="utf-8" src="https://static.worksmobile.net/static/wm/woff/edge/3.6.2/sdk.js"></script>
   <!-- ここにWOFF特有の初期設定やCSSのリンクなどが入るかもしれないね -->
   <style>
     /* 簡単な見た目のためのCSS（後でちゃんと作る） */
