--- a/room_select.html
+++ b/room_select.html
@@ -4,8 +4,8 @@
   <title>部屋選択</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- LIFF SDKの読み込み -->
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <!-- WOFF SDKの読み込み (LINE WORKS用) -->
+  <script charset="utf-8" src="https://static.worksmobile.net/static/wm/woff/edge/3.6.2/sdk.js"></script>
   <style>
     body { font-family: sans-serif; margin: 10px; }
     h1, h2 { margin-top: 0; }
