--- a/property_select.html
+++ b/property_select.html
@@ -34,6 +34,10 @@
       try {
         // WOFF IDとGAS Web App URLは外部ファイルや環境変数から読み込むことを推奨
         const woffIdForWorks = "https://line-app-project.vercel.app/property_select.html"; // WOFF ID (エンドポイントURL)
+        
+        // ★★★ デバッグ用に追加: woffIdForWorks の値をアラートで表示 ★★★
+        alert("WOFF ID (エンドポイントURL) の確認:\\n" + woffIdForWorks + "\\n\\nこの値がLINE WORKS Developer Consoleの登録内容と完全に一致しているか確認してください。");
+
         console.log('[property_select] woff.init with woffId:', woffIdForWorks);
         await woff.init({ woffId: woffIdForWorks }); // SDKのエラーメッセージに従い、キーを woffId に戻す
         console.log('[property_select] woff.init successful.');
