--- a/property_select.html
+++ b/property_select.html
@@ -36,7 +36,7 @@
         const woffIdForWorks = "Mtmj4rddmxBddYCPD0G81A"; // WOFF アプリIDに変更
         
         // ★★★ デバッグ用に追加: woffIdForWorks の値をアラートで表示 ★★★
-        alert("WOFF アプリID の確認:\\n" + woffIdForWorks + "\\n\\nこの値がLINE WORKS Developer Consoleで発行されたWOFFアプリIDと一致しているか確認してください。");
+        // alert("WOFF アプリID の確認:\\n" + woffIdForWorks + "\\n\\nこの値がLINE WORKS Developer Consoleで発行されたWOFFアプリIDと一致しているか確認してください。");
 
         console.log('[property_select] woff.init with woffId:', woffIdForWorks);
         await woff.init({ woffId: woffIdForWorks }); // SDKのエラーメッセージに従い、キーを woffId に戻す
