--- a/property_select.html
+++ b/property_select.html
@@ -117,7 +117,7 @@
         } else {
           // propertiesが配列でない場合の処理
           console.error('[property_select] GASから返されたデータが配列ではありません。', properties);
-          propertyListDiv.innerHTML = '<p>物件データの形式が正しくありません。開発者コンソールaaaaaを確認してください。</p>';
+          propertyListDiv.innerHTML = '<p>物件データの形式が正しくありません。開発者コンソールを確認してください。</p>';
         }
       } catch (error) {
         console.error('物件情報の取得に失敗しました:', error);
