--- a/property_select.html
+++ b/property_select.html
@@ -64,17 +64,20 @@
       propertyListDiv.innerHTML = '<p>物件情報を読み込み中です...</p>'; // いったん表示をリセット
 
       // WOFF IDとGAS Web App URLは外部ファイルや環境変数から読み込むことを推奨
-      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycbzzJSFvDIewfYUY6XUDo0BSFc1_CMec6zdwY8_WzbNF54ximf1AT5yf7rSmIJuzeDX8Qg/exec';
+      const gasWebAppUrl = 'ここにステップ1-4でコピーした新しいURLを貼り付け'; // ← ★★★ 更新 ★★★
 
       try {
         const response = await fetch(`${gasWebAppUrl}?action=getProperties`); // ← action=getProperties を追加
         if (!response.ok) {
           throw new Error('ネットワークの応答が正しくありませんでした。ステータス: ' + response.status);
         }
-        const properties = await response.json(); // GASから返ってきたJSONデータをJavaScriptのオブジェクトに変換
+        const responseObject = await response.json(); // GASから返ってきたJSONデータをJavaScriptのオブジェクトに変換
 
         // ★★★ デバッグ用に追加: GASからのレスポンス内容と型を確認 ★★★
-        console.log('[property_select] GAS Response (properties):', properties);
+        console.log('[property_select] GAS Response (raw object):', responseObject);
+        // ★★★ 実際の物件データ配列は responseObject.data に入る ★★★
+        const properties = responseObject.data; 
+        console.log('[property_select] Extracted properties from responseObject.data:', properties);
         console.log('[property_select] Type of properties:', typeof properties);
         console.log('[property_select] Is properties an array?', Array.isArray(properties));
 
