--- a/room_select.html
+++ b/room_select.html
@@ -79,16 +79,26 @@
       const roomListDiv = document.getElementById('room-list');
       roomListDiv.innerHTML = '<p>部屋情報を読み込み中です...</p>';
 
-      // GASから実際に部屋データを取得する処理
-      // actionパラメータなどを適宜変更してください。
       try {
-        // GASに物件IDを渡して部屋リストを要求
         const response = await fetch(`${gasWebAppUrl}?action=getRooms&propertyId=${propertyId}`);
+        // ★★★ デバッグ用: レスポンスのステータスとヘッダーを確認 ★★★
+        console.log('[room_select] GAS Response Status:', response.status);
+        console.log('[room_select] GAS Response Headers:', response.headers.get('Content-Type'));
+
         if (!response.ok) {
-          throw new Error('ネットワークの応答が正しくありませんでした。');
+          // ★★★ エラーレスポンスの内容も確認 ★★★
+          const errorText = await response.text();
+          console.error('[room_select] GAS Error Response Text:', errorText);
+          throw new Error(`ネットワークの応答が正しくありませんでした。ステータス: ${response.status}, 本文: ${errorText}`);
         }
-        const rooms = await response.json(); // GASから返ってきたJSONデータをJavaScriptのオブジェクトに変換
-        displayRooms(rooms, propertyId, propertyName);
+        const roomsData = await response.json(); // GASから返ってきたJSONデータをJavaScriptのオブジェクトに変換
+        
+        // ★★★ デバッグ用: GASからのレスポンス内容と型を確認 ★★★
+        console.log('[room_select] GAS Response (raw data):', roomsData);
+        console.log('[room_select] Type of roomsData:', typeof roomsData);
+        console.log('[room_select] Is roomsData an array?', Array.isArray(roomsData));
+
+        displayRooms(roomsData, propertyId, propertyName);
       } catch (error) {
         console.error('部屋情報の取得に失敗しました:', error);
         roomListDiv.innerHTML = '<p>部屋情報の取得に失敗しました。時間をおいて再度お試しください。</p>';
@@ -109,8 +119,10 @@
       const roomListDiv = document.getElementById('room-list');
       roomListDiv.innerHTML = ''; // 「読み込み中です」を消す
 
-      if (!rooms || rooms.length === 0) {
-        roomListDiv.innerHTML = '<p>この物件に登録されている部屋はありません。</p>';
+      // ★★★ rooms が配列であることをより確実にチェック ★★★
+      if (!Array.isArray(rooms) || rooms.length === 0) {
+        console.warn('[room_select] 部屋データが空または配列ではありません。', rooms);
+        roomListDiv.innerHTML = '<p>この物件に登録されている部屋はありません。またはデータの形式が正しくありません。</p>';
         return;
       }
 
